<!-- DenizenCore build file -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.denizenscript</groupId>
    <artifactId>denizencore</artifactId>
    <packaging>jar</packaging>
    <version>1.91.0-SNAPSHOT</version>
    <name>DenizenCore</name>
    <description>A powerful scripting engine for Java-based games</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <BUILD_NUMBER>Unknown</BUILD_NUMBER>
    </properties>

    <!-- Repositories -->
    <repositories>
        <repository>
            <id>Sonatype-public</id>
            <name>SnakeYAML repository</name>
            <url>https://repo1.maven.org/maven2/</url>
            <!-- <url>http://oss.sonatype.org/content/groups/public/</url> -->
        </repository>
        <repository>
            <id>FreneticLLC-public</id>
            <name>FreneticLLC Maven Server</name>
            <url>https://maven.freneticllc.com/</url>
        </repository>
    </repositories>

    <!-- Dependencies -->
    <dependencies>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>LATEST</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.33</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.freneticllc.freneticutilities</groupId>
            <artifactId>freneticdatasyntax</artifactId>
            <version>1.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>9.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-commons</artifactId>
            <version>9.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>4.3.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>4.8.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.mongodb</groupId>
                    <artifactId>bson-record-codec</artifactId>
                </exclusion>
            </exclusions>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <ciManagement>
        <system>jenkins</system>
        <url>https://ci.citizensnpcs.co</url>
    </ciManagement>
    <scm>
        <connection>scm:git:git://github.com/DenizenScript/Denizen-Core.git</connection>
        <developerConnection>scm:git:git:@github.com:DenizenScript/Denizen-Core.git</developerConnection>
        <url>https://github.com/DenizenScript/Denizen-Core/tree/master/</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>citizens-repo</id>
            <url>https://maven.citizensnpcs.co/repo</url>
        </repository>
    </distributionManagement>

    <build>
        <defaultGoal>clean package install</defaultGoal>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <stylesheetfile>${basedir}/src/javadoc/stylesheet.css</stylesheetfile>
                    <javadocDirectory>${basedir}/src/javadoc</javadocDirectory>
                    <docfilessubdirs>true</docfilessubdirs>
                    <links>
                        <link>http://commons.apache.org/lang/api</link>
                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                    </links>
                </configuration>
            </plugin>
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <artifactSet>
                                <includes>
                                    <include>com.freneticllc.freneticutilities:freneticdatasyntax</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <url>https://denizenscript.com/</url>
</project>
